src/parser/SimpLanPlus/SimpLanPlusParser.java
// Generated from C:/Users/velas/OneDrive/Desktop/MAGISTRALE/SecondoSemestre/Cosimo Laneve/SimpLanPlusCIProject-master/src\SimpLanPlus.g4 by ANTLR 4.10.1
package parser.SimpLanPlus;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpLanPlusParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, BOOL = 29, ID = 30, NUMBER = 31, WS = 32,
            LINECOMMENTS = 33, BLOCKCOMMENTS = 34;
    public static final int
            RULE_block = 0, RULE_statement = 1, RULE_declaration = 2, RULE_decFun = 3,
            RULE_decVar = 4, RULE_type = 5, RULE_arg = 6, RULE_assignment = 7, RULE_print = 8,
            RULE_ret = 9, RULE_ite = 10, RULE_call = 11, RULE_exp = 12;

    private static String[] makeRuleNames() {
        return new String[]{
                "block", "statement", "declaration", "decFun", "decVar", "type", "arg",
                "assignment", "print", "ret", "ite", "call", "exp"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'{'", "'}'", "';'", "'void'", "'('", "','", "')'", "'='", "'int'",
                "'bool'", "'var'", "'print'", "'return'", "'if'", "'else'", "'-'", "'!'",
                "'*'", "'/'", "'+'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'&&'",
                "'||'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, "BOOL", "ID", "NUMBER", "WS", "LINECOMMENTS",
                "BLOCKCOMMENTS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SimpLanPlus.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public SimpLanPlusParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class BlockContext extends ParserRuleContext {
        public List<DeclarationContext> declaration() {
            return getRuleContexts(DeclarationContext.class);
        }

        public DeclarationContext declaration(int i) {
            return getRuleContext(DeclarationContext.class, i);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public BlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_block;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterBlock(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitBlock(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitBlock(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_block);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(26);
                match(T__0);
                setState(30);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__8) | (1L << T__9))) != 0)) {
                    {
                        {
                            setState(27);
                            declaration();
                        }
                    }
                    setState(32);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(36);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(33);
                            statement();
                        }
                    }
                    setState(38);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(39);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatementContext extends ParserRuleContext {
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public PrintContext print() {
            return getRuleContext(PrintContext.class, 0);
        }

        public RetContext ret() {
            return getRuleContext(RetContext.class, 0);
        }

        public IteContext ite() {
            return getRuleContext(IteContext.class, 0);
        }

        public CallContext call() {
            return getRuleContext(CallContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(55);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(41);
                    assignment();
                    setState(42);
                    match(T__2);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(44);
                    print();
                    setState(45);
                    match(T__2);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(47);
                    ret();
                    setState(48);
                    match(T__2);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(50);
                    ite();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(51);
                    call();
                    setState(52);
                    match(T__2);
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(54);
                    block();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclarationContext extends ParserRuleContext {
        public DecFunContext decFun() {
            return getRuleContext(DecFunContext.class, 0);
        }

        public DecVarContext decVar() {
            return getRuleContext(DecVarContext.class, 0);
        }

        public DeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitDeclaration(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitDeclaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_declaration);
        try {
            setState(59);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(57);
                    decFun();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(58);
                    decVar();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DecFunContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(SimpLanPlusParser.ID, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public List<ArgContext> arg() {
            return getRuleContexts(ArgContext.class);
        }

        public ArgContext arg(int i) {
            return getRuleContext(ArgContext.class, i);
        }

        public DecFunContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_decFun;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterDecFun(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitDecFun(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitDecFun(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DecFunContext decFun() throws RecognitionException {
        DecFunContext _localctx = new DecFunContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_decFun);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(63);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__8:
                    case T__9: {
                        setState(61);
                        type();
                    }
                    break;
                    case T__3: {
                        setState(62);
                        match(T__3);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(65);
                match(ID);
                setState(66);
                match(T__4);
                setState(75);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
                    {
                        setState(67);
                        arg();
                        setState(72);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__5) {
                            {
                                {
                                    setState(68);
                                    match(T__5);
                                    setState(69);
                                    arg();
                                }
                            }
                            setState(74);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(77);
                match(T__6);
                setState(78);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DecVarContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(SimpLanPlusParser.ID, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public DecVarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_decVar;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterDecVar(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitDecVar(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitDecVar(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DecVarContext decVar() throws RecognitionException {
        DecVarContext _localctx = new DecVarContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_decVar);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(80);
                type();
                setState(81);
                match(ID);
                setState(84);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__7) {
                    {
                        setState(82);
                        match(T__7);
                        setState(83);
                        exp(0);
                    }
                }

                setState(86);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TypeContext type() throws RecognitionException {
        TypeContext _localctx = new TypeContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_type);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                _la = _input.LA(1);
                if (!(_la == T__8 || _la == T__9)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ArgContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(SimpLanPlusParser.ID, 0);
        }

        public ArgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_arg;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterArg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitArg(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitArg(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ArgContext arg() throws RecognitionException {
        ArgContext _localctx = new ArgContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_arg);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__10) {
                    {
                        setState(90);
                        match(T__10);
                    }
                }

                setState(93);
                type();
                setState(94);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignmentContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(SimpLanPlusParser.ID, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public AssignmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterAssignment(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitAssignment(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitAssignment(this);
            else return visitor.visitChildren(this);
        }
    }

    public final AssignmentContext assignment() throws RecognitionException {
        AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_assignment);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(96);
                match(ID);
                setState(97);
                match(T__7);
                setState(98);
                exp(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PrintContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public PrintContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_print;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterPrint(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitPrint(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitPrint(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PrintContext print() throws RecognitionException {
        PrintContext _localctx = new PrintContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_print);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(T__11);
                setState(101);
                exp(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RetContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public RetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ret;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterRet(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitRet(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitRet(this);
            else return visitor.visitChildren(this);
        }
    }

    public final RetContext ret() throws RecognitionException {
        RetContext _localctx = new RetContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_ret);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(103);
                match(T__12);
                setState(105);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__15) | (1L << T__16) | (1L << BOOL) | (1L << ID) | (1L << NUMBER))) != 0)) {
                    {
                        setState(104);
                        exp(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IteContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public IteContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ite;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterIte(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitIte(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitIte(this);
            else return visitor.visitChildren(this);
        }
    }

    public final IteContext ite() throws RecognitionException {
        IteContext _localctx = new IteContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_ite);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(107);
                match(T__13);
                setState(108);
                match(T__4);
                setState(109);
                exp(0);
                setState(110);
                match(T__6);
                setState(111);
                statement();
                setState(114);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                    case 1: {
                        setState(112);
                        match(T__14);
                        setState(113);
                        statement();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CallContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(SimpLanPlusParser.ID, 0);
        }

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public CallContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_call;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterCall(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitCall(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitCall(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CallContext call() throws RecognitionException {
        CallContext _localctx = new CallContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_call);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                match(ID);
                setState(117);
                match(T__4);
                setState(126);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__15) | (1L << T__16) | (1L << BOOL) | (1L << ID) | (1L << NUMBER))) != 0)) {
                    {
                        setState(118);
                        exp(0);
                        setState(123);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__5) {
                            {
                                {
                                    setState(119);
                                    match(T__5);
                                    setState(120);
                                    exp(0);
                                }
                            }
                            setState(125);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(128);
                match(T__6);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpContext extends ParserRuleContext {
        public ExpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_exp;
        }

        public ExpContext() {
        }

        public void copyFrom(ExpContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class BaseExpContext extends ExpContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public BaseExpContext(ExpContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterBaseExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitBaseExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitBaseExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class BinExpContext extends ExpContext {
        public ExpContext left;
        public Token op;
        public ExpContext right;

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public BinExpContext(ExpContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterBinExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitBinExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitBinExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class DerExpContext extends ExpContext {
        public TerminalNode ID() {
            return getToken(SimpLanPlusParser.ID, 0);
        }

        public DerExpContext(ExpContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterDerExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitDerExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof SimpLanPlusVisitor)
                return ((SimpLanPlusVisitor<? extends T>) visitor).visitDerExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class ValExpContext extends ExpContext {
        public TerminalNode NUMBER() {
            return getToken(SimpLanPlusParser.NUMBER, 0);
        }

        public ValExpContext(ExpContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).enterValExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof SimpLanPlusListener) ((SimpLanPlusListener) listener).exitValExp(this);
        }
